[package]
name = "zeropool-dioxus-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }
zeropool-client = { path = "./zeropool-client-rs" }

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
#fawkes-crypto-bellman_ce = { git = "https://github.com/zeropoolnetwork/phase2-bn254.git", branch = "feature/rayon-support" }
#fawkes-crypto-bellman_ce = { git = "https://github.com/zkBob/phase2-bn254.git", branch = "multicore-wasm" }

[workspace]
members = [
    "zeropool-client-rs",
]