[package]
name = "zeropool-dioxus-client"
version = "0.1.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zeropool-dioxus-client"
path = "gen/bin/desktop.rs"

[dependencies]
mobile-entry-point = "0.1.0"
dioxus = { version = "^0.2.4" }
zeropool-client = { path = "./zeropool-client-rs" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
log = "0.4.11"
ndk-glue = "0.2.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "*"

[patch.crates-io]
#fawkes-crypto-bellman_ce = { git = "https://github.com/zeropoolnetwork/phase2-bn254.git", branch = "feature/rayon-support" }
#fawkes-crypto-bellman_ce = { git = "https://github.com/zkBob/phase2-bn254.git", branch = "multicore-wasm" }

[workspace]
members = [
    "zeropool-client-rs",
]