[package]
name = "zeropool-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libzeropool-rs = { version = "0.3.11", features = ["native", "multicore"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
